; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto_PPP.c_PPPSetIPOptionToLCP.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto_PPP.c_PPPSetIPOptionToLCP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@PPP_IPCP_OPTION_IP = common dso_local global i32 0, align 4
@PPP_IPCP_OPTION_DNS1 = common dso_local global i32 0, align 4
@PPP_IPCP_OPTION_DNS2 = common dso_local global i32 0, align 4
@PPP_IPCP_OPTION_WINS1 = common dso_local global i32 0, align 4
@PPP_IPCP_OPTION_WINS2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PPPSetIPOptionToLCP(%struct.TYPE_3__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %9 = load i32*, i32** %6, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %13 = icmp eq %struct.TYPE_3__* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %11, %3
  store i32 0, i32* %4, align 4
  br label %47

15:                                               ; preds = %11
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* @PPP_IPCP_OPTION_IP, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @PPPSetIPAddressValueToLCP(i32* %16, i32 %17, i32* %19, i32 %20)
  store i32 %21, i32* %8, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* @PPP_IPCP_OPTION_DNS1, align 4
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 3
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @PPPSetIPAddressValueToLCP(i32* %22, i32 %23, i32* %25, i32 %26)
  %28 = load i32*, i32** %6, align 8
  %29 = load i32, i32* @PPP_IPCP_OPTION_DNS2, align 4
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 2
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @PPPSetIPAddressValueToLCP(i32* %28, i32 %29, i32* %31, i32 %32)
  %34 = load i32*, i32** %6, align 8
  %35 = load i32, i32* @PPP_IPCP_OPTION_WINS1, align 4
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 1
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @PPPSetIPAddressValueToLCP(i32* %34, i32 %35, i32* %37, i32 %38)
  %40 = load i32*, i32** %6, align 8
  %41 = load i32, i32* @PPP_IPCP_OPTION_WINS2, align 4
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 0
  %44 = load i32, i32* %7, align 4
  %45 = call i32 @PPPSetIPAddressValueToLCP(i32* %40, i32 %41, i32* %43, i32 %44)
  %46 = load i32, i32* %8, align 4
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %15, %14
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i32 @PPPSetIPAddressValueToLCP(i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
